tdf#109067 Fix default value of rotWithShape

According to the OOXML standard the default value is true, so for
the export of gradients and blips it has to be set explicitly to
false.

Change-Id: I3c9f67787cb11d6d9b58f07377b03167df669ed8